# loop_subdivision

./: .#CMakeLists.txt  .gitignore  CMakeLists.txt  LICENSE  input.json  readme.md
doc/: readme.md
examples/: CMakeLists.txt  loop_subdivision.cpp
src/: CMakeLists.txt  edge_core.cpp  edge_core.h  loop_alg.h  loop_subdivision.cpp
